// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders BookItem correctly with a single author 1`] = `
<div
  className="BookItem"
>
  <div
    className="book-item-thumbnail"
  >
    <img
      alt="test-title - test-authors"
      className="book-item-image"
    />
  </div>
  <div
    className="book-information"
  >
    <p
      className="book-information-content"
    >
      <span
        className="book-information-key"
      >
        Title - 
      </span>
      <span
        className="book-information-value"
      >
        test-title
      </span>
      <br />
      <span
        className="book-information-key"
      >
        Author
         -
         
      </span>
      <span
        className="book-information-value"
      >
        test-authors
      </span>
      <br />
      <span
        className="book-information-key"
      >
        ISBN - 
      </span>
      <span
        className="book-information-value"
      >
        <a
          href="https://www.amazon.co.uk/s?k=test-isbn"
        >
          test-isbn
        </a>
      </span>
    </p>
  </div>
</div>
`;

exports[`renders BookItem correctly with multiple authors 1`] = `
<div
  className="BookItem"
>
  <div
    className="book-item-thumbnail"
  >
    <img
      alt="test-title - authorOne, authorTwo"
      className="book-item-image"
    />
  </div>
  <div
    className="book-information"
  >
    <p
      className="book-information-content"
    >
      <span
        className="book-information-key"
      >
        Title - 
      </span>
      <span
        className="book-information-value"
      >
        test-title
      </span>
      <br />
      <span
        className="book-information-key"
      >
        Authors
         -
         
      </span>
      <span
        className="book-information-value"
      >
        authorOne, authorTwo
      </span>
      <br />
      <span
        className="book-information-key"
      >
        ISBN - 
      </span>
      <span
        className="book-information-value"
      >
        <a
          href="https://www.amazon.co.uk/s?k=test-isbn"
        >
          test-isbn
        </a>
      </span>
    </p>
  </div>
</div>
`;
